--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>MedCall | Home Health Service Bali</title>
+      <title>MediCall Bali | Home Health Service Bali</title>
 
       <!--====== Favicon Icon ======-->
       <link rel="shortcut icon" href="assets/img/icons/l1.png" type="img/png" />
@@ -74,7 +74,7 @@
           <div class="header-left">
             <div class="site-logo">
               <a href="index.html">
-                <img src="assets/img/logo-3.png" alt="" />
+                <img src="assets/img/icons/medbali.png" width="120px" height="60px" alt="" />
               </a>
             </div>
           </div>
@@ -224,7 +224,7 @@
           <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10">
             <div class="about-content mt-md-50">
               <div class="section-heading mb-20">
-                <span class="tagline color-tertiary">About Seeva</span>
+                <span class="tagline color-tertiary">About medicall bali</span>
                 <h2 class="title">Best Care for Your Health</h2>
               </div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quidem aperiam laudantium, incidunt dicta sit.</p>
@@ -697,7 +697,7 @@
       <div class="footer-inner bg-color-primary">
         <div class="container">
           <div class="copyright-area">
-            <p>© 2021 <a href="#">Seeva</a>. All Rights Reserved</p>
+            <p>© 2024 <a href="#">medicall bali</a>. All Rights Reserved</p>
           </div>
         </div>
       </div>
