--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Seeva - Medical and Dental HTML Template || Our Gallery</title>
+    <title>MediCall Bali | Home Health Service Bali</title>
 
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/img/icons/l1.png" type="img/png" />
@@ -34,7 +34,7 @@
           <div class="header-left">
             <div class="site-logo">
               <a href="index.html">
-                <img src="assets/img/logo.png" alt="Seeva" />
+                <img src="assets/img/icons/medbali.png" width="120px" height="60px" alt="" />
               </a>
             </div>
             <nav class="site-menu menu-gap-left d-none d-xl-block">
@@ -345,7 +345,7 @@
       <div class="footer-inner bg-color-primary">
         <div class="container">
           <div class="copyright-area">
-            <p>© 2021 <a href="#">Seeva</a>. All Rights Reserved</p>
+            <p>© 2024 <a href="#">medicall bali</a>. All Rights Reserved</p>
           </div>
         </div>
       </div>
