--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="single-list-item">
               <div class="contact-info">
                 <div class="icon">
-                  <img src="assets/img/icon/clock.png" alt="Icon" />
+                  <img src="assets/img/icons/back-in-time.png" alt="Icon" />
                 </div>
                 <div class="content">
                   <span class="info-title">Opening Hour</span>
@@ -47,7 +47,7 @@
             <div class="single-list-item">
               <div class="contact-info">
                 <div class="icon">
-                  <img src="assets/img/icon/map.png" alt="Icon" />
+                  <img src="assets/img/icons/map.png" alt="Icon" />
                 </div>
                 <div class="content">
                   <span class="info-title">Medical Address</span>
@@ -58,7 +58,7 @@
             <div class="single-list-item">
               <div class="contact-info">
                 <div class="icon">
-                  <img src="assets/img/icon/phone.png" alt="Icon" />
+                  <img src="assets/img/icons/phone-call.png" alt="Icon" />
                 </div>
                 <div class="content">
                   <span class="info-title">Phone Number</span>
@@ -74,7 +74,7 @@
           <div class="header-left">
             <div class="site-logo">
               <a href="index.html">
-                <img src="assets/img/icons/medbali.png" width="120px" height="60px" alt="" />
+                <img src="assets/img/icons/medbali.png" width="170px" height="80px" alt="" />
               </a>
             </div>
           </div>
@@ -202,7 +202,7 @@
           <div class="col-lg-4 col-md-6 col-sm-10">
             <div class="iconic-box-three">
               <div class="icon">
-                <img src="./assets/img/icons/checkup.png" alt="" />
+                <img src="./assets/img/icons/sthetoscope.png" alt="" />
               </div>
               <h4 class="title">Medical Check-Up</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
@@ -260,7 +260,7 @@
                 <li class="nav-item">
                   <a class="nav-link active" data-toggle="tab" href="#cat-Infusion" role="tab">
                     <span class="icon">
-                      <img src="./assets/img/icons/checkup-little.png" alt="" />
+                      <img src="./assets/img/icons/iv-bag-little.png" alt="" />
                     </span>
                     <span>Infusion</span>
                   </a>
@@ -276,7 +276,7 @@
                 <li class="nav-item">
                   <a class="nav-link" data-toggle="tab" href="#cat-MedCheck" role="tab">
                     <span class="icon">
-                      <img src="./assets/img/icons/checkup-little.png" alt="" />
+                      <img src="./assets/img/icons/sthetoscope-little.png" alt="" />
                     </span>
                     <span>Medical Check-Up</span>
                   </a>
