--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@
         <div class="panel-overlay"></div>
         <div class="panel-inner">
           <div class="canvas-logo">
-            <img src="assets/img/logo.png" alt="" />
+            <img src="assets/img/icons/medbali.png" width="170px" height="80px" alt="" />
           </div>
           <div class="about-us">
             <h5 class="canvas-widget-title">About Us</h5>
