--- a/contact.html
+++ b/contact.html
@@ -122,14 +122,14 @@
           </div>
           <nav class="mobile-menu">
             <ul class="primary-menu">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="index.html">About</a></li>
+              <li><a href="index.html">Shop</a></li>
+              <li><a href="index.html">Doctors</a></li>
+              <li><a href="gallery.html">Gallery</a></li>
               <li class="active">
-                <a href="index.html">Home</a>
+                <a href="#">Contact</a>
               </li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#shop">Shop</a></li>
-              <li><a href="#doctors-section">Doctors</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Contact</a></li>
             </ul>
           </nav>
           <a href="#" class="panel-close">
