--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
               <li><a href="#about">About</a></li>
               <li><a href="#shop">Shop</a></li>
               <li><a href="#doctors-section">Doctors</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
           <a href="#" class="panel-close">
@@ -148,11 +148,10 @@
             <div class="row">
               <div class="col-lg-9 col-md-9">
                 <div class="hero-content">
-                  <span class="tagline" data-animation="fadeInDown" data-delay="0.5s">Love Respect & Care</span>
                   <h1 class="title" data-animation="fadeInLeft" data-delay="0.6s">
-                    Bali Healty <br />
-                    Package
+                    Home Health Service Bali
                   </h1>
+                  <span class="tagline" data-animation="fadeInDown" data-delay="0.5s">Dedicated to Providing the Best In-Home Health Care</span> <br>
                   <a href="wa.me/+62895378386782" class="template-btn template-btn-bordered" data-animation="fadeInUp" data-delay="0.7s">Book an Appoinment </a>
                 </div>
               </div>
