--- a/index.html
+++ b/index.html
@@ -148,10 +148,8 @@
             <div class="row">
               <div class="col-lg-9 col-md-9">
                 <div class="hero-content">
-                  <h1 class="title" data-animation="fadeInLeft" data-delay="0.6s">
-                    Home Health Service Bali
-                  </h1>
-                  <span class="tagline" data-animation="fadeInDown" data-delay="0.5s">Dedicated to Providing the Best In-Home Health Care</span> <br>
+                  <h1 class="title" data-animation="fadeInLeft" data-delay="0.6s">Home Health Service Bali</h1>
+                  <span class="tagline" data-animation="fadeInDown" data-delay="0.5s">Dedicated to Providing the Best In-Home Health Care</span> <br />
                   <a href="wa.me/+62895378386782" class="template-btn template-btn-bordered" data-animation="fadeInUp" data-delay="0.7s">Book an Appoinment </a>
                 </div>
               </div>
@@ -164,8 +162,8 @@
             <div class="row">
               <div class="col-lg-9 col-md-9">
                 <div class="hero-content">
-                  <span class="tagline" data-animation="fadeInDown" data-delay="0.5s">Love Respect & Care</span>
-                  <h1 class="title" data-animation="fadeInLeft" data-delay="0.6s">Medicine Care & Pharmacy</h1>
+                  <h1 class="title" data-animation="fadeInLeft" data-delay="0.6s">Home Health Service Bali</h1>
+                  <span class="tagline" data-animation="fadeInDown" data-delay="0.5s">Dedicated to Providing the Best In-Home Health Care</span> <br />
                   <a href="wa.me/+62895378386782" class="template-btn template-btn-bordered" data-animation="fadeInUp" data-delay="0.7s">Book an Appoinment </a>
                 </div>
               </div>
