--- a/index.html
+++ b/index.html
@@ -632,9 +632,9 @@
                 </div>
                 <div class="doctor-information">
                   <h5 class="name">
-                    <a href="doctor-details.html">Dwi Alviany</a>
+                    <a href="doctor-details.html">dr.Qwerty</a>
                   </h5>
-                  <span class="specialty">spesialis gigi</span>
+                  <span class="specialty">Qwerty</span>
                 </div>
               </div>
             </div>
@@ -645,9 +645,9 @@
                 </div>
                 <div class="doctor-information">
                   <h5 class="name">
-                    <a href="doctor-details.html">Nathan</a>
+                    <a href="doctor-details.html">dr.qwerty</a>
                   </h5>
-                  <span class="specialty">spesialis bola</span>
+                  <span class="specialty">qwerty</span>
                 </div>
               </div>
             </div>
@@ -658,9 +658,9 @@
                 </div>
                 <div class="doctor-information">
                   <h5 class="name">
-                    <a href="doctor-details.html">Tedjo</a>
+                    <a href="doctor-details.html">dr.qwerty</a>
                   </h5>
-                  <span class="specialty">Spesialis obat masuk angin</span>
+                  <span class="specialty">qwerty</span>
                 </div>
               </div>
             </div>
@@ -671,9 +671,9 @@
                 </div>
                 <div class="doctor-information">
                   <h5 class="name">
-                    <a href="doctor-details.html">Novita Anggaini</a>
+                    <a href="doctor-details.html">dr.qwerty</a>
                   </h5>
-                  <span class="specialty">Shik Shak Shok</span>
+                  <span class="specialty">qwerty</span>
                 </div>
               </div>
             </div>
