--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,8 @@
                 <li>
                   <a href="index.html">Home</a>
                 </li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <!--<li><a href="gallery.html">Gallery</a></li>-->
+
                 <li class="active">
                   <a href="#">Contact</a>
                 </li>
@@ -122,7 +123,8 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="index.html">About</a></li>
               <li><a href="index.html">Shop</a></li>
-              <li><a href="gallery.html">Gallery</a></li>
+              <!--<li><a href="gallery.html">Gallery</a></li>-->
+
               <li class="active">
                 <a href="#">Contact</a>
               </li>
@@ -161,27 +163,17 @@
                 <div class="single-contact-info">
                   <h3 class="info-title"><i class="fal fa-map-marker-alt"></i> Address</h3>
                   <p>
-                    7895 Denpasar Bali, <br />
-                    NM 198866, See Our Stores
+                    Canggu, Pantai Brawa St., Badung, <br />
+                    Kuta Utara, Bali
                   </p>
                 </div>
                 <div class="single-contact-info">
                   <h3 class="info-title"><i class="fal fa-coffee"></i> Get In Touch</h3>
                   <ul>
-                    <li><span>Phone Number</span><a href="tel:+012020200">+012 (345) 6789</a></li>
-                    <li><span>Email Address</span><a href="mailto:support@gmail.com">support@gmail.com</a></li>
-                    <li><span>Hotline</span><a href="tel:+12345678">12345678</a></li>
+                    <li><span>Phone Number</span><a href="tel:+6289520283955">+6289-5202-83955</a></li>
+                    <li><span>Email Address</span><a href="mailto:medicallbali.health@gmail.com">medicallbali.health@gmail.com</a></li>
+                    <li><span>WhatsApp</span><a href="https://wa.me/6289520283955">+6289-5202-83955</a></li>
                   </ul>
-                </div>
-                <div class="single-contact-info">
-                  <h3 class="info-title"><i class="fal fa-comments"></i> Follow Us</h3>
-                  <p>Sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore</p>
-                  <p class="social-icon">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter-square"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-youtube-square"></i></a>
-                  </p>
                 </div>
               </div>
             </div>
@@ -191,32 +183,8 @@
               <h2 class="chart-title">Working Hour</h2>
               <ul>
                 <li>
-                  <span><i class="far fa-angle-right"></i>Monday</span>
-                  <span>9:00-19:00</span>
-                </li>
-                <li>
-                  <span><i class="far fa-angle-right"></i>Tuesday</span>
-                  <span>9:00-19:00</span>
-                </li>
-                <li>
-                  <span><i class="far fa-angle-right"></i>Wednesday</span>
-                  <span>9:00-19:00</span>
-                </li>
-                <li>
-                  <span><i class="far fa-angle-right"></i>Thursday</span>
-                  <span>9:00-19:00</span>
-                </li>
-                <li>
-                  <span><i class="far fa-angle-right"></i>Friday</span>
-                  <span>9:00-19:00</span>
-                </li>
-                <li>
-                  <span><i class="far fa-angle-right"></i>Saturday</span>
-                  <span>9:00-19:00</span>
-                </li>
-                <li>
-                  <span><i class="far fa-angle-right"></i>Sunday</span>
-                  <span>9:00-19:00</span>
+                  <span><i class="far fa-angle-right"></i>Everyday</span>
+                  <span>24 Hours</span>
                 </li>
               </ul>
             </div>
@@ -237,7 +205,7 @@
       <div class="footer-inner bg-color-primary">
         <div class="container">
           <div class="copyright-area">
-            <p>© 2024 <a href="#">medicall bali</a>. All Rights Reserved</p>
+            <p>© 2024 <a href="#">medicall bali</a>. All Rights Reserved-π</p>
           </div>
         </div>
       </div>
