--- a/contact.html
+++ b/contact.html
@@ -54,62 +54,8 @@
               </ul>
             </nav>
           </div>
-          <div class="header-right">
-            <ul class="extra-icons">
-              <li class="d-none d-sm-block"></li>
-              <li class="d-none d-xl-block">
-                <div class="off-canvas-btn style-two">
-                  <span></span>
-                </div>
-              </li>
-              <li class="d-xl-none">
-                <a href="#" class="navbar-toggler">
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                </a>
-              </li>
-            </ul>
-          </div>
         </div>
       </div>
-
-      <!-- Start Off Canvas -->
-      <div class="slide-panel off-canvas-panel">
-        <div class="panel-overlay"></div>
-        <div class="panel-inner">
-          <div class="canvas-logo">
-            <img src="assets/img/icons/medbali.png" width="170px" height="80px" alt="" />
-          </div>
-          <div class="about-us">
-            <h5 class="canvas-widget-title">About Us</h5>
-            <p>Sed perspiciatis unde omnis iste natus error voluptatem accusantium doloremque laudantium totam rem aperams eaque ipsa quae abillo.</p>
-          </div>
-          <div class="contact-us">
-            <h5 class="canvas-widget-title">Contact Us</h5>
-            <ul>
-              <li>
-                <i class="far fa-map-marker-alt"></i>
-                354 Oakridge, Camden NJ 08102 - BALI
-              </li>
-              <li>
-                <i class="far fa-envelope-open"></i>
-                <a href="mailto:support@qolle.com">support@medicallbali.com</a>
-                <a href="mailto:info@qolle.com">info@medicallbali.com</a>
-              </li>
-              <li>
-                <i class="far fa-phone"></i>
-                <a href="tel:+01234567899">+62 xxx xxx</a><br />
-                <a href="tel:+8563214">+62 xxx xxx</a>
-              </li>
-            </ul>
-          </div>
-          <a href="#" class="panel-close">
-            <i class="fal fa-times"></i>
-          </a>
-        </div>
-      </div>
-      <!-- End Off Canvas -->
 
       <!-- Start Mobile Panel -->
       <div class="slide-panel mobile-slide-panel">
@@ -124,7 +70,6 @@
               <li><a href="index.html">About</a></li>
               <li><a href="index.html">Shop</a></li>
               <!--<li><a href="gallery.html">Gallery</a></li>-->
-
               <li class="active">
                 <a href="#">Contact</a>
               </li>
@@ -140,7 +85,7 @@
     <!--====== End Template Header ======-->
 
     <!--====== Page Title Start ======-->
-    <section class="page-title-area page-title-bg" style="background-image: url(assets/img/section-bg/page-title.jpg)">
+    <section class="page-title-area page-title-bg" style="background-image: url()">
       <div class="container">
         <h1 class="page-title">Contact Us</h1>
 
