--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="content">
                   <span class="info-title">Everyday</span>
-                  <a href="#" class="info-desc">24 Hours</a>
+                  <a class="info-desc">24 Hours</a>
                 </div>
               </div>
             </div>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="content">
                   <span class="info-title">Medical Address</span>
-                  <a href="#" class="info-desc">Canggu, Pantai Brawa St., Badung, Kuta Utara, Bali</a>
+                  <a class="info-desc">Canggu, Pantai Brawa St., Badung, Kuta Utara, Bali</a>
                 </div>
               </div>
             </div>
@@ -62,7 +62,7 @@
                 </div>
                 <div class="content">
                   <span class="info-title">Phone Number</span>
-                  <a href="#" class="info-desc">+6289520283955</a>
+                  <a class="info-desc">+6289520283955</a>
                 </div>
               </div>
             </div>
@@ -141,7 +141,7 @@
     <section id="hero" class="hero-slider hero-slider-two style-two">
       <div class="hero-slider-active">
         <div class="single-hero-slider">
-          <div class="hero-slider-bg bg-size-cover" style="background-image: url()"></div>
+          <div class="hero-slider-bg bg-size-cover" style="background-image: url(./assets/img/products/Hero\ Page.jpg)"></div>
           <div class="container">
             <div class="row">
               <div class="col-lg-9 col-md-9">
@@ -155,7 +155,7 @@
           </div>
         </div>
         <div class="single-hero-slider">
-          <div class="hero-slider-bg bg-size-cover" style="background-image: url()"></div>
+          <div class="hero-slider-bg bg-size-cover" style="background-image: url(./assets/img/products/Hero\ Page.jpg)"></div>
           <div class="container">
             <div class="row">
               <div class="col-lg-9 col-md-9">
