--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                 </li>
                 <li><a href="index.html">About</a></li>
                 <li>
-                  <a href="index.html">Home</a>
+                  <a href="index.html">Shop</a>
                 </li>
                 <!--<li><a href="gallery.html">Gallery</a></li>-->
 
