--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                       </div>
                       <div class="content">
                         <h5 class="title">
-                          <a href="product-details.html">Hemoglobin A1c tests</a>
+                          <a href="product-details.html">Hemoglobin A1c test</a>
                         </h5>
                       </div>
                       <div class="hover-action">
