--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                       </div>
                       <div class="content">
                         <h5 class="title">
-                          <a href="product-details.html">Basic metabolic panel</a>
+                          <a href="product-details.html">Basic Metabolic Panel</a>
                         </h5>
                       </div>
                       <div class="hover-action">
@@ -572,7 +572,7 @@
                       </div>
                       <div class="content">
                         <h5 class="title">
-                          <a href="product-details.html">Thyroid function tests</a>
+                          <a href="product-details.html">Thyroid Function Test</a>
                         </h5>
                       </div>
                       <div class="hover-action">
@@ -589,7 +589,7 @@
                       </div>
                       <div class="content">
                         <h5 class="title">
-                          <a href="product-details.html">Liver function tests</a>
+                          <a href="product-details.html">Liver Function Test</a>
                         </h5>
                       </div>
                       <div class="hover-action">
@@ -606,7 +606,7 @@
                       </div>
                       <div class="content">
                         <h5 class="title">
-                          <a href="product-details.html">Cholesterol tests</a>
+                          <a href="product-details.html">Cholesterol Test</a>
                         </h5>
                       </div>
                       <div class="hover-action">
@@ -640,7 +640,7 @@
                       </div>
                       <div class="content">
                         <h5 class="title">
-                          <a href="product-details.html">Hemoglobin A1c test</a>
+                          <a href="product-details.html">Hemoglobin A1c Test</a>
                         </h5>
                       </div>
                       <div class="hover-action">
