--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                       </div>
                       <div class="content">
                         <h5 class="title">
-                          <a href="product-details.html">Complete blood count (CBC)</a>
+                          <a href="product-details.html">Complete Blood Count (CBC)</a>
                         </h5>
                       </div>
                       <div class="hover-action">
