--- a/contact.html
+++ b/contact.html
@@ -115,9 +115,9 @@
                 <div class="single-contact-info">
                   <h3 class="info-title"><i class="fal fa-coffee"></i> Get In Touch</h3>
                   <ul>
-                    <li><span>Phone Number</span><a href="tel:+6289520283955">+6289-5202-83955</a></li>
-                    <li><span>Email </span><a href="mailto:medicallbali.health@gmail.com">medicallbali.health@gmail.com</a></li>
-                    <li><span>WhatsApp</span><a href="https://wa.me/6289520283955">+6289-5202-83955</a></li>
+                    <li>Phone Number :<a href="tel:+6289520283955">+6289-5202-83955</a></li>
+                    <li>Email  :<a href="mailto:medicallbali.health@gmail.com">medicallbali.health@gmail.com</a></li>
+                    <li>WhatsApp :<a href="https://wa.me/6289520283955">+6289-5202-83955</a></li>
                   </ul>
                 </div>
               </div>
