--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@
               </div>
               <p>
                 Best Care for Your Health At Medicall Bali, we are dedicated to providing the highest quality healthcare to ensure your well-being. Our commitment to excellence is evident in every aspect of our services. Our priority is to
-                deliver exceptional medicall care with compassion and professionalism.
+                deliver exceptional medical care with compassion and professionalism.
               </p>
               <ul class="check-list-two mt-40">
                 <li class="wow fadeInUp" data-wow-delay="0.3s">
                   <h5>Trusted doctor</h5>
                   <p>Our team of experienced and trustworthy doctors is here to offer you the best medical care. We prioritize your health and are committed to delivering personalized treatments tailored to your needs.</p>
                 </li>
-                <br>
+                <br />
                 <li class="wow fadeInUp" data-wow-delay="0.3s">
                   <h5>Tested product</h5>
                   <p>We use only the highest quality, rigorously tested products to ensure the safety and effectiveness of our treatments.</p>
