--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
                   <h3 class="info-title"><i class="fal fa-coffee"></i> Get In Touch</h3>
                   <ul>
                     <li>Phone Number :<a href="tel:+6289520283955">+6289-5202-83955</a></li>
-                    <li>Email  :<a href="mailto:medicallbali.health@gmail.com">medicallbali.health@gmail.com</a></li>
+                    <li>Email :<a href="mailto:medicallbali.health@gmail.com">medicallbali.health@gmail.com</a></li>
                     <li>WhatsApp :<a href="https://wa.me/6289520283955">+6289-5202-83955</a></li>
                   </ul>
                 </div>
@@ -150,7 +150,7 @@
       <div class="footer-inner bg-color-primary">
         <div class="container">
           <div class="copyright-area">
-            <p>© 2024 <a href="#">medicall bali</a>. All Rights Reserved-π</p>
+            <p>© 2024 <a href="index.html">MediCall bali</a>. All Rights Reserved-π</p>
           </div>
         </div>
       </div>
