--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@
           <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10">
             <div class="about-content mt-md-50">
               <div class="section-heading mb-20">
-                <span class="tagline color-tertiary">About medicall bali</span>
+                <span class="tagline color-tertiary">About MediCall bali</span>
                 <h2 class="title">Best Care for Your Health</h2>
               </div>
               <p>
-                Best Care for Your Health At Medicall Bali, we are dedicated to providing the highest quality healthcare to ensure your well-being. Our commitment to excellence is evident in every aspect of our services. Our priority is to
+                Best Care for Your Health At MediCall Bali, we are dedicated to providing the highest quality healthcare to ensure your well-being. Our commitment to excellence is evident in every aspect of our services. Our priority is to
                 deliver exceptional medical care with compassion and professionalism.
               </p>
               <ul class="check-list-two mt-40">
@@ -697,7 +697,7 @@
       <div class="footer-inner bg-color-primary">
         <div class="container">
           <div class="copyright-area">
-            <p>© 2024 <a href="#">medicall bali</a>. All Rights Reserved-π</p>
+            <p>© 2024 <a href="index.html">MediCall bali</a>. All Rights Reserved-π</p>
           </div>
         </div>
       </div>
