--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                     <span class="icon">
                       <img src="./assets/img/icons/mortar.png" alt="" />
                     </span>
-                    <span>Traditional Herbs</span>
+                    <span>Traditional Therapy</span>
                   </a>
                 </li>
               </ul>
@@ -452,6 +452,23 @@
                       <div class="hover-action">
                         <ul class="action-btns">
                           <span> Iron infusion is a successful therapy for iron deficiency, a condition that leads to fatigue and impairs your daily functioning.</span>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="product-box mt-30">
+                      <div class="thumbnail">
+                        <img src="assets/img/products/Oral Medication.jpg" alt="Image" />
+                      </div>
+                      <div class="content">
+                        <h5 class="title">
+                          <a href="product-details.html">Oral Medication</a>
+                        </h5>
+                      </div>
+                      <div class="hover-action">
+                        <ul class="action-btns">
+                          <span> Oral medication involves taking drugs by mouth, such as tablets, capsules, or liquids. It's preferred by those avoiding IVs, offering a convenient and non-invasive way to deliver treatment.</span>
                         </ul>
                       </div>
                     </div>
@@ -668,6 +685,40 @@
                       <div class="hover-action">
                         <ul class="action-btns">
                           <span>Traditional Organic Therapy Treatments use natural substances like herbs, diet, acupuncture, and massage to promote holistic health and well-being, avoiding synthetic chemicals.</span>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="product-box mt-30">
+                      <div class="thumbnail">
+                        <img src="assets/img/products/Cupping Therapy.jpg" alt="Image" />
+                      </div>
+                      <div class="content">
+                        <h5 class="title">
+                          <a href="product-details.html">Cupping Therapy</a>
+                        </h5>
+                      </div>
+                      <div class="hover-action">
+                        <ul class="action-btns">
+                          <span>Cupping therapy can reduce muscle pain, improve circulation, promote relaxation, boost the immune system, and remove toxins from the body.</span>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="product-box mt-30">
+                      <div class="thumbnail">
+                        <img src="assets/img/products/Nerve Point Therapy.jpg" alt="Image" />
+                      </div>
+                      <div class="content">
+                        <h5 class="title">
+                          <a href="product-details.html">Nerve Point Therapy</a>
+                        </h5>
+                      </div>
+                      <div class="hover-action">
+                        <ul class="action-btns">
+                          <span>Nerve point therapy involves stimulating specific nerve points in the body to alleviate pain and promote healing, contributing to overall well-being.</span>
                         </ul>
                       </div>
                     </div>
