--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                       </div>
                       <div class="hover-action">
                         <ul class="action-btns">
-                          <span>Cupping therapy can reduce muscle pain, improve circulation, promote relaxation, boost the immune system, and remove toxins from the body.</span>
+                          <span>Cupping therapy uses suction cups on the skin to boost blood flow, reduce inflammation, and aid healing, benefiting conditions like headaches, rheumatism, infertility, diabetes, and back pain.</span>
                         </ul>
                       </div>
                     </div>
