--- a/contact.html
+++ b/contact.html
@@ -118,6 +118,7 @@
                     <li>Phone Number :<a href="tel:+6289520283955">+6289-5202-83955</a></li>
                     <li>Email :<a href="mailto:medicallbali.health@gmail.com">medicallbali.health@gmail.com</a></li>
                     <li>WhatsApp :<a href="https://wa.me/6289520283955">+6289-5202-83955</a></li>
+                    <li>Instagram : <a href="https://www.instagram.com/medicall_bali/">@medicall_bali</a></li>
                   </ul>
                 </div>
               </div>
