--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="header-right d-none d-lg-flex">
             <ul class="extra-icons">
               <li>
-                <a href="https://wa.me/+62895378386782" class="template-btn template-btn-tertiary">BOOK NOW</a>
+                <a href="https://wa.me/6289520283955?text=Hi%20MediCall%20Bali~%0AI'm%20interested%20in%20your%20services!%0ACould%20you%20please%20provide%20more%20information" class="template-btn template-btn-tertiary">BOOK NOW</a>
               </li>
             </ul>
           </div>
@@ -148,7 +148,7 @@
                 <div class="hero-content">
                   <h1 class="title" data-animation="fadeInLeft" data-delay="0.6s">Home Health Service Bali</h1>
                   <span class="tagline" data-animation="fadeInDown" data-delay="0.5s">Dedicated to Providing the Best In-Home Health Care</span> <br />
-                  <a href="https://wa.me/+62895378386782" class="template-btn template-btn-bordered" data-animation="fadeInUp" data-delay="0.7s">Book an Appoinment </a>
+                  <a href="https://wa.me/6289520283955?text=Hi%20MediCall%20Bali~%0AI'm%20interested%20in%20your%20services!%0ACould%20you%20please%20provide%20more%20information" class="template-btn template-btn-bordered" data-animation="fadeInUp" data-delay="0.7s">Book an Appoinment </a>
                 </div>
               </div>
             </div>
@@ -162,7 +162,7 @@
                 <div class="hero-content">
                   <h1 class="title" data-animation="fadeInLeft" data-delay="0.6s">Home Health Service Bali</h1>
                   <span class="tagline" data-animation="fadeInDown" data-delay="0.5s">Dedicated to Providing the Best In-Home Health Care</span> <br />
-                  <a href="https://wa.me/+62895378386782" class="template-btn template-btn-bordered" data-animation="fadeInUp" data-delay="0.7s">Book an Appoinment </a>
+                  <a href="https://wa.me/6289520283955?text=Hi%20MediCall%20Bali~%0AI'm%20interested%20in%20your%20services!%0ACould%20you%20please%20provide%20more%20information" class="template-btn template-btn-bordered" data-animation="fadeInUp" data-delay="0.7s">Book an Appoinment </a>
                 </div>
               </div>
             </div>
@@ -739,7 +739,7 @@
     <!--====== Back to Top End ======-->
 
     <!-- WhatsApp Floating Button -->
-    <a href="https://wa.me/62895378386782" class="wa-float" target="_blank">
+    <a href="https://wa.me/6289520283955?text=Hi%20MediCall%20Bali~%0AI'm%20interested%20in%20your%20services!%0ACould%20you%20please%20provide%20more%20information" class="wa-float" target="_blank">
       <img src="./assets/img/icons/whatsapp (2).png" alt="WhatsApp" />
     </a>
 
