--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
                   <ul>
                     <li>Phone Number :<a href="tel:+6289520283955">+6289-5202-83955</a></li>
                     <li>Email :<a href="mailto:medicallbali.health@gmail.com">medicallbali.health@gmail.com</a></li>
-                    <li>WhatsApp :<a href="https://wa.me/6289520283955">+6289-5202-83955</a></li>
+                    <li>WhatsApp :<a href="https://wa.me/6289520283955?text=Hi%20MediCall%20Bali~%0AI'm%20interested%20in%20your%20services!%0ACould%20you%20please%20provide%20more%20information?">+6289-5202-83955</a></li>
                     <li>Instagram : <a href="https://www.instagram.com/medicall_bali/">@medicall_bali</a></li>
                   </ul>
                 </div>
