--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@
       <div class="footer-inner bg-color-primary">
         <div class="container">
           <div class="copyright-area">
-            <p>© 2024 <a href="index.html">MediCall bali</a>. All Rights Reserved-π</p>
+            <p>© 2024 <a href="index.html">MediCall Bali</a>. All Rights Reserved-π</p>
           </div>
         </div>
       </div>
