--- a/index.html
+++ b/index.html
@@ -148,7 +148,13 @@
                 <div class="hero-content">
                   <h1 class="title" data-animation="fadeInLeft" data-delay="0.6s">Home Health Service Bali</h1>
                   <span class="tagline" data-animation="fadeInDown" data-delay="0.5s">Dedicated to Providing the Best In-Home Health Care</span> <br />
-                  <a href="https://wa.me/6289520283955?text=Hi%20MediCall%20Bali~%0AI'm%20interested%20in%20your%20services!%0ACould%20you%20please%20provide%20more%20information?" class="template-btn template-btn-bordered" data-animation="fadeInUp" data-delay="0.7s">Book an Appoinment </a>
+                  <a
+                    href="https://wa.me/6289520283955?text=Hi%20MediCall%20Bali~%0AI'm%20interested%20in%20your%20services!%0ACould%20you%20please%20provide%20more%20information?"
+                    class="template-btn template-btn-bordered"
+                    data-animation="fadeInUp"
+                    data-delay="0.7s"
+                    >Book an Appoinment
+                  </a>
                 </div>
               </div>
             </div>
@@ -162,7 +168,13 @@
                 <div class="hero-content">
                   <h1 class="title" data-animation="fadeInLeft" data-delay="0.6s">Home Health Service Bali</h1>
                   <span class="tagline" data-animation="fadeInDown" data-delay="0.5s">Dedicated to Providing the Best In-Home Health Care</span> <br />
-                  <a href="https://wa.me/6289520283955?text=Hi%20MediCall%20Bali~%0AI'm%20interested%20in%20your%20services!%0ACould%20you%20please%20provide%20more%20information?" class="template-btn template-btn-bordered" data-animation="fadeInUp" data-delay="0.7s">Book an Appoinment </a>
+                  <a
+                    href="https://wa.me/6289520283955?text=Hi%20MediCall%20Bali~%0AI'm%20interested%20in%20your%20services!%0ACould%20you%20please%20provide%20more%20information?"
+                    class="template-btn template-btn-bordered"
+                    data-animation="fadeInUp"
+                    data-delay="0.7s"
+                    >Book an Appoinment
+                  </a>
                 </div>
               </div>
             </div>
@@ -219,7 +231,7 @@
           <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10">
             <div class="about-content mt-md-50">
               <div class="section-heading mb-20">
-                <span class="tagline color-tertiary">About MediCall bali</span>
+                <span class="tagline color-tertiary">About MediCall Bali</span>
                 <h2 class="title">Best Care for Your Health</h2>
               </div>
               <p>
@@ -748,7 +760,7 @@
       <div class="footer-inner bg-color-primary">
         <div class="container">
           <div class="copyright-area">
-            <p>© 2024 <a href="index.html">MediCall bali</a>. All Rights Reserved-π</p>
+            <p>© 2024 <a href="index.html">MediCall Bali</a>. All Rights Reserved-π</p>
           </div>
         </div>
       </div>
